--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
+# Visual Studio 2022
+.vs/*
+
 # Visual Studio Code
 .vscode/*
 !.vscode/settings.json
