--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,9 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "css"
+          "style": "css",
+          "changeDetection": "OnPush",
+          "skipTests": true
         }
       },
       "i18n": {
